# OpenGL-homework

HW1/: 16超算_16337113_劳马东_HW1.docx
HW2/rectangle/: cube.cpp  display.h  rect.cpp
HW2/report/: 作业文档.docx
HW3/: 作业文档.docx
HW3/project3/: CMakeLists.txt  display.h  rotate.cpp
HW3/project3/release/: CMakeCache.txt  Makefile  cmake_install.cmake  spinBall.cbp
HW4/: 作业文档.docx
HW4/project4/: project4.sln
HW4/project4/Bezier/: bezier.cpp  bezier.vcxproj  bezier.vcxproj.filters  stdafx.cpp
HW4/project4/PolygonMesh/: PolygonMesh.cpp  PolygonMesh.vcxproj  PolygonMesh.vcxproj.filters  io.h  stdafx.cpp  vector2.h
HW4/project4/common/: display.h
HW5/project5/: CMakeLists.txt  display.h  main.c
